--- a/community.qmd
+++ b/community.qmd
@@ -26,6 +26,15 @@ An online event with key thought leaders and content creators in the Filipino te
 {{< video https://youtu.be/ivzmUPRqxQ8?si=c_OdyC4FvqOJv6Bq title="Shifting to a Career in Data | RUG-PH 120" >}}
 A panel discussion hosted by R User's Group Philippines on transitioning to a career in data.
 
+[![Introduction to Big Data and Analytics](images/video-placeholder.png){width=100%}](https://www.facebook.com/watch/live/?ref=search&v=2388014311349277)
+Kyle Escosia's talk on Big Data and Analytics, recorded live at an AWS Siklab Pilipinas event.
+
+[![Building a Serverless Data Lake in AWS](images/video-placeholder.png){width=100%}](https://www.facebook.com/watch/live/?ref=watch_permalink&v=684903669389073)
+A session by Kyle Escosia on creating a serverless data lake in AWS.
+
+{{< video https://www.youtube.com/watch?v=Y9060t-BG0g title="Kwentuhan Nights (February 8, 2024)" >}}
+The "Kwentuhan Meetup" is an online event for members of the Data Engineering Pilipinas group, hosted on Discord. 
+
 ## Doc Ligot Interviews
 
 ### Kuya Dev
@@ -44,13 +53,21 @@ A panel discussion hosted by R User's Group Philippines on transitioning to a ca
 {{< video https://www.youtube.com/watch?v=GZcYyILg3kc title="From Dropout to Tech Star: Aemy Obinguar's Inspirational Tale" >}}
 ### Sandy Lauguico
 {{< video https://www.youtube.com/watch?v=8pJMFi3kIfQ title="Exclusive Interview: Sandy Lauguico's Data Engineering Transition" >}}
-## Recorded Events and Talks
 
-[![Introduction to Big Data and Analytics](images/video-placeholder.png){width=100%}](https://www.facebook.com/watch/live/?ref=search&v=2388014311349277)
-Kyle Escosia's talk on Big Data and Analytics, recorded live at an AWS Siklab Pilipinas event.
+### Neil Bacon's Transition: Discover how Leoneil Bacon moved from Biology to Data.
+{{< video https://www.youtube.com/watch?v=Qq6hbQuf-1I title="Breaking Barriers: How Leoneil Bacon Switched from Biology to Data" >}}
 
-[![Building a Serverless Data Lake in AWS](images/video-placeholder.png){width=100%}](https://www.facebook.com/watch/live/?ref=watch_permalink&v=684903669389073)
-A session by Kyle Escosia on creating a serverless data lake in AWS.
+### Trisha Nicdao's Journey: Insights into Trisha's shift from ESG to Data Analytics, touching on sustainability and GenZ perspectives.
+{{< video https://www.youtube.com/watch?v=dViAWAVGGSA title="Empowering Change: Trisha Nicdao's Transition from ESG to Data Analytics" >}}
+
+### Angel Felismino's Career Path: From Computer Science to leading in tech talent acquisition.
+{{< video https://www.youtube.com/watch?v=XR4KNGA_Ipc title="From Code to Careers: Angel Felismino's Tech Talent Recruitment Journey" >}}
+
+### Emmanuel Irog-Irog's Innovations: Discussing RAG and LLMs with a focus on recent projects.
+{{< video https://www.youtube.com/watch?v=DydcJGyt7Xc title="The Core: Emmanuel Irog-Irog Explores Retrieval Augmented Generation" >}}
+
+### Jerel John Velarde's Vision: Using data for enhancing democracy in AI startups.
+{{< video https://www.youtube.com/watch?v=O1JXjUYwWc8 title="Jerel John Velarde's Mission in AI Startups for Democracy" >}}
 
 
 ## Blogs and Articles
@@ -68,4 +85,11 @@ A session by Kyle Escosia on creating a serverless data lake in AWS.
 
 ## People and Pages
 
-- [Kyle Escosia](https://linktr.ee/klescosia) - Explore the work of Kyle Escosia, a Data Engineer with a passion for all things data.
+- [Doc Ligot](https://docligot.com/)
+- [Sherwin Pelayo](https://www.linkedin.com/in/sherwinpelayo/)
+- [Kyle Escosia](https://linktr.ee/klescosia)
+- [Sandy C. Lauguico](https://www.facebook.com/sandy.c.lauguico)
+- [Josh Dev](https://www.facebook.com/profile.php?id=100087019650476)
+- [Kuya Dev](https://www.facebook.com/KuyaDevDotCom)
+- [Dev Stuff with JP](https://www.facebook.com/devstuffwithjp)
+- [Alex Gamboa](https://www.facebook.com/alexgamboa34/)
